--- a/.github/workflows/burnup.yml
+++ b/.github/workflows/burnup.yml
@@ -1,9 +1,12 @@
 name: Burnup Chart
 
 on:
+  push:
+    branches: [logs]       
+  workflow_dispatch: {}
   schedule:
-        - cron: "0 2 * * 1"  
-  workflow_dispatch: {}    
+    - cron: "0 2 * * 1"
+    - cron: "0 3 * * 1"
 jobs:
   burnup:
     runs-on: ubuntu-latest
