--- a/.github/workflows/burnupDispatch.yml
+++ b/.github/workflows/burnupDispatch.yml
@@ -1,7 +1,7 @@
 name: Burnup (caller on main)
 
 on:
-  workflow_dispatch: {}     # gives you the "Run workflow" button
+  workflow_dispatch: {}     # "Run workflow" button
   schedule:
     # Sunday 7:00 PM America/Vancouver
     - cron: "0 2 * * 1"     # DST (Mar–Nov) 7pm PT → Mon 02:00 UTC
@@ -12,5 +12,32 @@ permissions:
   issues: read
 
 jobs:
-  call-burnup:
-    uses: COSC-499-W2025/capstone-project-team-7/.github/workflows/burnup.yml@logs
+  burnup:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out logs branch
+        uses: actions/checkout@v4
+        with:
+          ref: logs
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install deps
+        run: pip install matplotlib pandas requests python-dateutil
+
+      - name: Generate burnup chart
+        env:
+          GITHUB_REPOSITORY: ${{ github.repository }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: python scripts/burnup.py
+
+      - name: Commit chart back to logs
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add charts/burnup.png charts/burnup_data.csv
+          git commit -m "Update burnup chart (from main workflow)" || echo "No changes"
+          git push origin HEAD:logs
