--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,8 @@ fastapi
 uvicorn
 supabase==2.0.0
 python-dotenv==1.0.0
-pydantic==2.0.0
+pydantic
 pytest==7.4.0
 pytest-asyncio==0.21.0
+openai==1.12.0
+httpx==0.24.0
