--- a/backend/setup.cfg
+++ b/backend/setup.cfg
@@ -21,11 +21,9 @@ install_requires =
 [options.packages.find]
 where = .
 include =
-    capstone_backend
-    capstone_backend.*
     src
     src.*
 
 [options.entry_points]
 console_scripts =
-    parse = capstone_backend.cli_runner:main
+    parse = src.cli.parse_zip:main
