Add media content analysis features and update requirements
- Enhance media summary formatting to include content labels and insights for images, audio, and video.
- Introduce new dependencies for computer vision and audio analysis in requirements and setup configuration.
- Update README with instructions for using new features and dependencies.
- Modify media types to support content labels and summaries for various media formats.

--- a/backend/setup.cfg
+++ b/backend/setup.cfg
@@ -27,3 +27,13 @@ include =
 [options.entry_points]
 console_scripts =
     parse = src.cli.parse_zip:main
+
+[options.extras_require]
+vision =
+    torch>=2.1.0
+    torchvision>=0.16.0
+    numpy>=1.24.0
+    torchaudio>=2.1.0
+    librosa>=0.10.1
+    soundfile>=0.12.1
+    audioread>=3.0.1
