--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,3 +14,10 @@ mutagen
 questionary
 rich
 python-docx
+torch>=2.1.0
+torchvision>=0.16.0
+numpy>=1.24.0
+torchaudio>=2.1.0
+librosa>=0.10.1
+soundfile>=0.12.1
+audioread>=3.0.1
