--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@ backend/src/auth/__pycache__/
 backend/.deps-installed
 .venv_textual
 backend/textual_app/.venv_textual
+textual-ui.stderr
+ai-analysis-latest.md
