--- a/.gitignore
+++ b/.gitignore
@@ -30,4 +30,5 @@ backend/.deps-installed
 backend/textual_app/.venv_textual
 textual-ui.stderr
 ai-analysis-latest.md
+ai-analysis-latest.json
 resume_item.md
