--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@
 # DO NOT COMMIT YOUR ACTUAL .env FILE TO VERSION CONTROL
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_KEY=your-anon-key
+# Optional: filter skill progression commits to your author emails (comma-separated)
+TEXTUAL_SKILL_PROGRESS_EMAILS=you@example.com,your.work.email@example.com
