--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,5 @@
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_KEY=your-anon-key
 # Optional: filter skill progression commits to your author emails (comma-separated)
-TEXTUAL_SKILL_PROGRESS_EMAILS=you@example.com,your.work.email@example.com
+TEXTUAL_SKILL_PROGRESS_EMAILS=jalmora@student.ubc.ca
+PORTFOLIO_USER_EMAIL=jalmora@student.ubc.ca
