fixing pr files

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_KEY=your-anon-key
 # Optional: filter skill progression commits to your author emails (comma-separated)
+TEXTUAL_SKILL_PROGRESS_EMAILS=user.user@gmail.com
+PORTFOLIO_USER_EMAIL=user.user@gmail.com
