--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ textual-ui.stderr
 ai-analysis-latest.md
 ai-analysis-latest.json
 resume_item.md
+
+# Skill summary artifacts
+skill_summary_*.json
+skill_summary_raw.txt
