--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,7 @@
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_KEY=your-anon-key
 # Optional: filter skill progression commits to your author emails (comma-separated)
+# Legacy env used by the Textual CLI (kept for compatibility)
 TEXTUAL_SKILL_PROGRESS_EMAILS=user.user@gmail.com
+# Preferred env used by the portfolio UI; wins if both are set
 PORTFOLIO_USER_EMAIL=user.user@gmail.com
