--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,7 @@ mutagen
 rich
 python-docx
 textual
+cryptography>=41.0.0
 # Code analyzer dependencies - tree-sitter
 tree-sitter>=0.21.0,<0.26.0
 
