--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@
 # DO NOT COMMIT YOUR ACTUAL .env FILE TO VERSION CONTROL
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_KEY=your-anon-key
+# OpenAI key (optional; needed for AI features)
+OPENAI_API_KEY=sk-...
+# 32-byte base64 key for at-rest encryption (use python -c "import os,base64; print(base64.b64encode(os.urandom(32)).decode())")
+ENCRYPTION_MASTER_KEY=
 # Optional: filter skill progression commits to your author emails (comma-separated)
 # Legacy env used by the Textual CLI (kept for compatibility)
 TEXTUAL_SKILL_PROGRESS_EMAILS=user.user@gmail.com
