--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,8 @@ ai-analysis-latest.md
 ai-analysis-latest.json
 resume_item.md
 SKILLS_PROGRESS_PLAN.md
+docs/feature-inventory.md
+docs/migration-plan.md
 
 # Skill summary artifacts
 skill_summary_*.json
