--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "capstone-project-team-7",
   "version": "1.0.0",
+  "private": true,
   "description": "```text ├── backend │   └── src │       ├── analyzer/ │       ├── api/ │       ├── auth/ │       ├── scanner/ │       ├── storage/ │       └── main.py ├── docs │   ├── assets/ │   ├── WBS.md │   ├── dfd.md │   ├── systemArchitecture.md │   ├── projectProposal.md │   ├── projectRequirements.md ├── tests ├── docker-compose.yml └── README.md ```",
   "main": "index.js",
+  "workspaces": [
+    "frontend",
+    "electron"
+  ],
   "directories": {
     "doc": "docs",
     "test": "tests"
