--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,25 @@
-# This is an example environment configuration file.
-# Modify the values as needed and do not forget to rename it to .env
-# DO NOT COMMIT YOUR ACTUAL .env FILE TO VERSION CONTROL
-SUPABASE_URL=https://your-project.supabase.co
-SUPABASE_KEY=your-anon-key
-# Optional: filter skill progression commits to your author emails (comma-separated)
-# Legacy env used by the Textual CLI (kept for compatibility)
-TEXTUAL_SKILL_PROGRESS_EMAILS=user.user@gmail.com
-# Preferred env used by the portfolio UI; wins if both are set
-PORTFOLIO_USER_EMAIL=user.user@gmail.com
+# Example environment configuration for all features.
+# Copy to .env and fill with your project-specific values.
+# DO NOT COMMIT YOUR ACTUAL .env FILE.
+
+# Supabase (required for auth, storage, resume syncing, config manager)
+SUPABASE_URL=https://your-project.supabase.co          # Supabase project URL
+SUPABASE_KEY=your-service-role-key                     # Service role key used by backend/CLI
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key        # Optional alias if tools expect this name
+SUPABASE_ANON_KEY=your-anon-key                        # Public anon key used for user sessions and JS uploads
+
+# User-scoped scan preferences (optional; enables remote profile loading in parse_zip)
+SCAN_USER_ID=00000000-0000-0000-0000-000000000000      # UUID from profiles.owner/user_configs.owner
+
+# AI features (optional; required for LLMRemoteMediaAnalyzer and in-app AI analysis)
+OPENAI_API_KEY=sk-...                                  # OpenAI API key; leave unset to disable AI calls
+
+# CLI/Textual commit attribution filters (optional)
+TEXTUAL_SKILL_PROGRESS_EMAILS=user@example.com         # Comma-separated emails to filter timelines
+PORTFOLIO_USER_EMAIL=user@example.com                  # Preferred single email; wins if both are set
+
+# Local Supabase tooling (optional)
+SUPABASE_LOCAL=sbp_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx   # Supabase CLI project ref if running supabase start
+
+# Reserved/experimental
+ENCRYPTION_MASTER_KEY=base64-encoded-key               # Not currently consumed; placeholder for secret encryption
