improved .env.example

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ SUPABASE_SERVICE_ROLE_KEY=your-service-role-key        # Optional alias if tools
 SUPABASE_ANON_KEY=your-anon-key                        # Public anon key used for user sessions and JS uploads
 
 # User-scoped scan preferences (optional; enables remote profile loading in parse_zip)
-SCAN_USER_ID=00000000-0000-0000-0000-000000000000      # UUID from profiles.owner/user_configs.owner
+SCAN_USER_ID=00000000-0000-0000-0000-000000000000      # Only used by CLI/headless parse_zip to load a user's scan profile; TUI loads preferences from the logged-in session instead
 
 # AI features (optional; required for LLMRemoteMediaAnalyzer and in-app AI analysis)
 OPENAI_API_KEY=sk-...                                  # OpenAI API key; leave unset to disable AI calls
