--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ python-dotenv==1.0.0
 pydantic
 pytest==7.4.0
 pytest-asyncio==0.21.0
+python-multipart
 openai==1.12.0
 httpx==0.24.0
 tiktoken==0.5.2
