--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,6 +15,8 @@ rich
 python-docx
 textual
 cryptography>=41.0.0
+python-magic-bin>=0.4.14; sys_platform == 'win32'
+python-magic>=0.4.27; sys_platform != 'win32'
 # Code analyzer dependencies - tree-sitter
 tree-sitter>=0.21.0,<0.26.0
 
