--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,5 @@ filterwarnings =
     ; Ignore Pydantic v2 deprecation warnings from third-party libraries (gotrue/supabase)
     ignore:The `update_forward_refs` method is deprecated:DeprecationWarning
     ignore::pydantic.warnings.PydanticDeprecatedSince20
+markers =
+    integration: tests that hit external services (Supabase) and require env vars
