--- a/docs/api-spec.yaml
+++ b/docs/api-spec.yaml
@@ -265,11 +265,11 @@ components:
       properties:
         id: { type: string, format: uuid }
         user_id: { type: string, format: uuid }
-        title: { type: string, description: "Required. Portfolio item title" }
-        summary: { type: string, nullable: true, description: "Optional. Detailed summary (max 1000 chars)" }
-        role: { type: string, nullable: true, description: "Optional. Role or position (max 255 chars)" }
-        evidence: { type: string, nullable: true, description: "Optional. Evidence link or description (max 255 chars)" }
-        thumbnail: { type: string, nullable: true, description: "Optional. Thumbnail image URL (max 255 chars)" }
+        title: { type: string, description: "Required. Portfolio item title", maxLength: 255 }
+        summary: { type: string, nullable: true, description: "Optional. Detailed summary (max 1000 chars)", maxLength: 1000 }
+        role: { type: string, nullable: true, description: "Optional. Role or position (max 255 chars)", maxLength: 255 }
+        evidence: { type: string, nullable: true, description: "Optional. Evidence link or description (max 2048 chars)", maxLength: 2048 }
+        thumbnail: { type: string, nullable: true, description: "Optional. Thumbnail image URL (max 1024 chars)", maxLength: 1024 }
         created_at: { type: string, format: date-time }
         updated_at: { type: string, format: date-time }
       required: [id, user_id, title, created_at, updated_at]
@@ -277,21 +277,21 @@ components:
     PortfolioItemCreate:
       type: object
       properties:
-        title: { type: string, description: "Required. Portfolio item title" }
-        summary: { type: string, nullable: true }
-        role: { type: string, nullable: true }
-        evidence: { type: string, nullable: true }
-        thumbnail: { type: string, nullable: true }
+        title: { type: string, description: "Required. Portfolio item title", maxLength: 255 }
+        summary: { type: string, nullable: true, maxLength: 1000 }
+        role: { type: string, nullable: true, maxLength: 255 }
+        evidence: { type: string, nullable: true, maxLength: 2048 }
+        thumbnail: { type: string, nullable: true, maxLength: 1024 }
       required: [title]
 
     PortfolioItemUpdate:
       type: object
       properties:
-        title: { type: string, nullable: true }
-        summary: { type: string, nullable: true }
-        role: { type: string, nullable: true }
-        evidence: { type: string, nullable: true }
-        thumbnail: { type: string, nullable: true }
+        title: { type: string, nullable: true, maxLength: 255 }
+        summary: { type: string, nullable: true, maxLength: 1000 }
+        role: { type: string, nullable: true, maxLength: 255 }
+        evidence: { type: string, nullable: true, maxLength: 2048 }
+        thumbnail: { type: string, nullable: true, maxLength: 1024 }
 
     PortfolioRefreshRequest:
       type: object
