--- a/.env.example
+++ b/.env.example
@@ -20,5 +20,8 @@ PORTFOLIO_USER_EMAIL=user@example.com                  # Preferred single email;
 # Local Supabase tooling (optional)
 SUPABASE_LOCAL=sbp_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx   # Supabase CLI project ref if running supabase start
 
+# API Features (optional)
+PORTFOLIO_USE_API=true                                 # Enable API-based project ranking (set to false to use local calculation only)
+
 # Reserved/experimental
 ENCRYPTION_MASTER_KEY=base64-encoded-key               # Not currently consumed; placeholder for secret encryption
