--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,19 +12,21 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "lucide-react": "^0.563.0",
     "next": "14.2.15",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-router-dom": "^7.13.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.15",
     "postcss": "^8.4.47",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
   }
