--- a/electron/package.json
+++ b/electron/package.json
@@ -9,7 +9,7 @@
     "build": "tsc -p tsconfig.json",
     "build:electron": "tsc -p tsconfig.json",
     "build:watch": "tsc -p tsconfig.json -w",
-    "start": "node dist/main.js"
+    "start": "electron ."
   },
   "dependencies": {
     "electron": "^31.0.0"
