--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "start": "next start",
     "lint": "next lint",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
     "test:e2e": "playwright test"
   },
   "dependencies": {
